tests/baselines/reference/publicMemberImplementedAsPrivateInDerivedClass.errors.txt
publicMemberImplementedAsPrivateInDerivedClass.ts(4,7): error TS2420: Class 'Foo' incorrectly implements interface 'Qux'.
  Property 'Bar' is private in type 'Foo' but not in type 'Qux'.


==== publicMemberImplementedAsPrivateInDerivedClass.ts (1 errors) ====
    interface Qux {
     Bar: number;
    }
    class Foo implements Qux {
          ~~~
!!! error TS2420: Class 'Foo' incorrectly implements interface 'Qux'.
!!! error TS2420:   Property 'Bar' is private in type 'Foo' but not in type 'Qux'.
     private Bar: number;
    }
    